test/compilable/imports/wrong_mod_name.d
module wrong_mod_name_bleh;
