test/fail_compilation/imports/import18517b.d
module import18517a;
